# 2PLogger

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SESSION_NOTES.md
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/bandmap/: BandmapModel.cpp  BandmapModel.h  CMakeLists.txt
src/cluster/: CMakeLists.txt  ClusterClient.cpp  ClusterClient.h
src/contest/: CMakeLists.txt  ContestRules.cpp  ContestRules.h
src/cw/: CMakeLists.txt  CwEngine.cpp  CwEngine.h
src/dxcc/: CMakeLists.txt  DxccDatabase.cpp  DxccDatabase.h  DxccEntity.h
src/export/: AdifExporter.cpp  AdifExporter.h  CMakeLists.txt
src/log/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  LogBook.cpp  LogBook.h  QsoRecord.h
src/radio/: AetherSdrRadio.cpp  AetherSdrRadio.h  CMakeLists.txt  RadioFactory.cpp  RadioFactory.h  RadioInterface.cpp  RadioInterface.h  RadioMode.h  RadioProfile.h  RigctldRadio.cpp  RigctldRadio.h
src/udp/: CMakeLists.txt  UdpBroadcaster.cpp  UdpBroadcaster.h
src/widgets/: CMakeLists.txt  EntryWidget.cpp  EntryWidget.h
tests/: CMakeLists.txt
tests/dxcc/: CMakeLists.txt  test_dxcc.cpp
tests/log/: CMakeLists.txt  main.cpp  test_database.cpp
tests/radio/: CMakeLists.txt  test_radio_mode.cpp
